<resources>
    <string name="app_name">ConectaTri</string>

    <!-- Strings related to login -->
    <string name="prompt_user">CNPJ</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="text_login_empty_field">Por favor, preencha os campos para entrar</string>
    <string name="text_login">Faça o login para continuar</string>
    <string name="text_auto_adhesion">Cadastre-se</string>
    <string name="text_login_result_success">Você já pode entrar com seus dados</string>
    <string name="login_fingerprint_tip">Ou você pode usar sua digital agora</string>
    <string name="login_remember">Lembrar senha</string>


    <string name="title_activity_main">Conecta Tri</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_quote_type">Que tipo de cotação?</string>
    <string name="title_activity_suppliers_list">Selecionar Fornecedor</string>
    <string name="menu_save">SALVAR</string>
    <string name="title_activity_supplier_create">Adicionar / Editar fornecedor</string>
    <string name="content_create_supplier_edt_supplier_name">Razão social do fornecedor</string>
    <string name="content_create_supplier_edt_cnpj">CNPJ</string>
    <string name="content_create_supplier_edt_info">Informações</string>
    <string name="content_create_supplier_edt_contact_name">Nome do representante</string>
    <string name="content_create_supplier_edt_email">E-mail</string>
    <string name="content_create_supplier_edt_contact_phone">Telefone do representante</string>
    <string name="title_products_list">Produtos</string>
    <string name="content_product_create_name">Nome do produto</string>
    <string name="content_product_create_brand">Fabricante</string>
    <string name="content_product_create_unit">Unidade de medida</string>
    <string name="content_product_create_quantity">Quantidade</string>
    <string name="dialog_close_button">Fechar</string>
    <string name="content_product_create_type">Tipo</string>
    <string name="title_product_create_activity">Criar Produto</string>
    <string name="content_create_supplier_edt_contact_phone_ddd">DDD</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_invalid_email">Endereço de e-mail inválido</string>
    <string name="error_invalid_cnpj">CNPJ inválido</string>
    <string name="item_listing_seasonal">• Lista sazonal</string>
    <string name="item_listing_weekly">• Lista semanal</string>
    <string name="item_listing_common">• Lista comum</string>
    <string name="title_activity_listings_list">Minhas Listas</string>
    <string name="title_activity_listing_create">Criar Lista</string>
    <string name="content_create_listing_edt_info">Informações</string>
    <string name="content_create_listing_edt_name">Nome da lista</string>
    <string name="content_create_listing_edt_description">Descrição</string>
    <string name="content_create_listing_btn_products">Selecionar Produtos</string>
    <string name="content_create_listing_btn_quantity">Selecionar Quantidade</string>
    <string name="title_suppliers">Fornecedores</string>
    <string name="title_remote_quotes">Cotações Remotas</string>
    <string name="title_quotes_list">Cotações</string>
    <string name="title_quote_products">Produtos Cotados</string>
    <string name="title_activity_quote_product">Produto Cotado</string>
    <string name="title_activity_products_select">Selecionar Produtos</string>


    <string name="money">R$ %1$,.2f</string>
    <string name="error_selection_required">É necessário selecionar ao menos um item da lista</string>
    <string name="content_create_quote_edt_name">Nome da cotação</string>
    <string name="content_create_quote_edt_description">Descrição</string>
    <string name="content_create_quote_edt_period">Validade</string>
    <string name="content_create_quote_edt_date_from">De</string>
    <string name="content_create_quote_edt_date_until">Até</string>
    <string name="title_quote_create_activity">Criar cotação</string>
    <string name="btn_activity_sign_up_submit">Cadastrar</string>
    <string name="error_invalid_dates">A data de início deve ser anterior à data de término</string>
    <string name="text_connection_failed">Não foi possível comunicar-se com o servidor</string>
    <string name="text_undo">DESFAZER</string>
    <string name="text_supplier_deleted">Fornecedor removido</string>
    <string name="content_product_create_description">Descrição</string>
    <string name="error_passwords_dont_match">Senha e confirmação devem coincidir</string>
    <string name="error_invalid_password_min_chars">A senha deve conter pelo menos 8 caracteres</string>
    <string name="title_product_set_quantity">Inserir Quantidades</string>
    <string name="text_listing_deleted">Lista removida</string>
    <string name="text_content_products_select_header_tip">Não encontra um produto?\n Utilize a barra de pesquisas para buscar no servidor</string>
    <string name="text_quote_deleted">Cotação removida</string>
    <string name="content_create_listing_type">Tipo</string>
    <string name="item_quote_manual">Cotação presencial</string>
    <string name="item_quote_remote">Cotação remota</string>
    <string name="login_forgot_password"><u>Esqueci a senha</u></string>
    <string name="text_attention">Atenção</string>
    <string name="text_confirm_delete_item_name">Deseja realmente remover \"%1s\"?</string>
    <string name="text_password_change_successful">Você já pode entrar com a senha nova</string>
    <string name="title_sign_up">Cadastro</string>
    <string name="error_must_accept_agreement">É necessário concordar com os termos</string>
    <string name="activity_sign_up_agreement"><![CDATA[Li e aceito os <a href=\'https://www.google.com.br/search?q=termos+de+uso\'>termos de uso</a> e a <a href=\'https://www.google.com.br/search?q=política+de+privacidade\'>política de privacidade</a>]]></string>
    <string name="btn_activity_recover_password_submit">Mudar senha</string>
    <string name="error_creation_failed">Falha na criação do novo item</string>
    <string name="menu_ok">Ok</string>
    <string name="error_name_too_short">Nome curto demais</string>
    <string name="text_content_listings_select_header_tip">Para incluir automaticamente produtos na cotação, selecione uma ou mais das listas abaixo.</string>
    <string name="text_edit_user_success">Informações atualizadas com sucesso!</string>
    <string name="error_internal_server_error">Erro interno do servidor</string>
    <string name="title_activity_edit_user_info">Minhas informções</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_ongoing_quote">Cotação em Andamento</string>
    <string name="text_tab_requests">PEDIDOS</string>
    <string name="text_tab_status">STATUS</string>
    <string name="text_tab_list">LISTA</string>
    <string name="money_prefix">R$</string>
    <string name="text_item_ongoing_quote_request_quantity">Quant. de itens:</string>
    <string name="text_item_ongoing_quote_request_price">Preço do pedido:</string>
    <string name="text_item_ongoing_quote_responded_true">PREENCHEU A COTAÇÃO</string>
    <string name="text_item_ongoing_quote_responded_false">PENDENTE</string>
    <string name="error_invalid_cnpj_check_digits_did_you_mean">Dígitos de verificação inválidos. Você quis dizer: %1s ?</string>
    <string name="invalid_mail">Erro: E-mail inválido</string>
    <string name="text_tab_ongoing_quotes">EM ANDAMENTO</string>
    <string name="text_tab_closed_quotes">FINALIZADAS</string>
    <string name="content_quote_create_txt_close_quote">Declarar esta cotação como finalizada</string>
    <string name="item_quote_supplier_txt_price">Preço por unidade</string>
    <string name="item_quote_supplier_txt_quantity">Unidades</string>
    <string name="text_create_quote_success">Cotação criada com sucesso!</string>
    <string name="item_listing_text_items">Itens:</string>


</resources>
