<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/edt_product_name"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_product_create_name"
                    android:inputType="text"
                    android:textSize="24sp"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/content_create_listing_edt_info"
                android:textSize="19sp"
                android:textStyle="italic"/>

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_description"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_product_create_description"
                    android:inputType="text"
                    />
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>


            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.wemind.marketplacetribanco.views.SelectableEditText
                    android:id="@+id/edt_type"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_product_create_type"
                    />
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_brand"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_product_create_brand"
                    android:inputType="text"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_unit"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_product_create_unit"
                    android:inputType="text"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <EditText
                    android:id="@+id/edt_quantity"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_product_create_quantity"
                    android:inputType="numberDecimal"/>

                    <TextView
                        android:id="@+id/value_unit_symbol"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_height="20dp"
                        android:background="@null"
                        android:text="" />
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>