<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_name"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_create_listing_edt_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/content_create_listing_edt_info"
                android:textSize="19sp"
                android:textStyle="italic"/>

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_description"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_create_listing_edt_description"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.wemind.marketplacetribanco.views.SelectableEditText
                    android:id="@+id/edt_type"
                    style="@style/AppTheme.TextInpuLayoutEditText"
                    android:hint="@string/content_create_listing_type"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <View
                style="@style/LinearInputFormComponent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgroundLightGray"/>

            <TextView
                android:id="@+id/btn_select_products"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingStart="32dp"
                android:text="@string/content_create_listing_btn_products"
                android:textColor="@android:color/black"
                android:textSize="19sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgroundLightGray"/>

            <TextView
                android:id="@+id/btn_quantity"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingStart="32dp"
                android:text="@string/content_create_listing_btn_quantity"
                android:textColor="@android:color/black"
                android:textSize="19sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgroundLightGray"/>
        </LinearLayout>
    </ScrollView>
</layout>