<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <br.com.wemind.marketplacetribanco.views.TextInputLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_create_quote_edt_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"/>
            </br.com.wemind.marketplacetribanco.views.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/content_create_quote_edt_period"
                android:textSize="19sp"
                android:textStyle="italic"/>

            <LinearLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <br.com.wemind.marketplacetribanco.views.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/edt_date_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:hint="@string/content_create_quote_edt_date_from"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>
                    </br.com.wemind.marketplacetribanco.views.TextInputLayout>

                    <View
                        android:id="@+id/btn_date_from"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <br.com.wemind.marketplacetribanco.views.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/edt_time_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:imeOptions="actionNext"
                            android:inputType="time"
                            android:maxLines="1"
                            android:text="00:00"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>
                    </br.com.wemind.marketplacetribanco.views.TextInputLayout>

                    <View
                        android:id="@+id/btn_time_from"
                        android:layout_width="64dp"
                        android:layout_height="52dp"/>
                </FrameLayout>
            </LinearLayout>


            <LinearLayout
                style="@style/LinearInputFormComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <br.com.wemind.marketplacetribanco.views.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/edt_date_until"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:hint="@string/content_create_quote_edt_date_until"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>
                    </br.com.wemind.marketplacetribanco.views.TextInputLayout>

                    <View
                        android:id="@+id/btn_date_until"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:clickable="true"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <br.com.wemind.marketplacetribanco.views.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/edt_time_until"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:imeOptions="actionNext"
                            android:inputType="time"
                            android:maxLines="1"
                            android:text="00:00"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>
                    </br.com.wemind.marketplacetribanco.views.TextInputLayout>

                    <View
                        android:id="@+id/btn_time_until"
                        android:layout_width="64dp"
                        android:layout_height="52dp"
                        android:clickable="true"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>